# bin_picking

./: .gitignore  Actions.md  README.md  pyproject.toml  schema.drawio
bin_picking/envs/: mujocoenv.py
bin_picking/models/camera_based/: dict_pe_fe.py  simple_chatgpt.py
bin_picking/objects/: mujoco_env.py  objects.py  stl_objects.py
bin_picking/objects/stl/: clamp.stl  deskbin.stl
bin_picking/robots/: dh_dummy_robot.py  robot.py  robot_old.py  ur5_robot.urdf
bin_picking/tasks/: custom_task.py  push_task.py  task.py
notebooks/: register_robots.ipynb  register_stls.ipynb  test.ipynb  test_mujoco.ipynb
